# Reborn-Vision-2024-armor-Inference

./: CMakeLists.txt  README.md
.cache/clangd/index/: inference.cpp.AF41A5E4DFB17223.idx  inference.hpp.021E2C410B2123D4.idx  number_classifier.cpp.F1587ACC7EFF1B3E.idx  number_classifier.hpp.4069CAA3AB1B0004.idx  tradition.cpp.931B48B4725A6DD1.idx  tradition.hpp.8F3411273B5EA0B4.idx  video_detect_test.cpp.2D83CBCF818BB9F1.idx
include/: inference.hpp  number_classifier.hpp  tradition.hpp
model/: number_classifier.onnx
model/mobilenetv3_last_int_all_new/: last.xml
src/: inference.cpp  number_classifier.cpp  tradition.cpp  video_detect_test.cpp
